// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> Default story renders snapshot 1`] = `
<label
  class="label"
>
  Label
   
</label>
`;

exports[`<Label /> Inverted story renders snapshot 1`] = `
<div
  style="padding: 1rem; background: rgb(0, 0, 0);"
>
  <label
    class="label label--inverted"
  >
    Label
     
  </label>
</div>
`;

exports[`<Label /> Optional story renders snapshot 1`] = `
<label
  class="label"
>
  Label
   
  <span
    class="label__flag"
  >
    (optional)
  </span>
</label>
`;
